--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "twitter-backend",
+  "name": "plan-grid-backend",
   "version": "1.0.0",
-  "description": "backend clone of twitter ",
+  "description": "",
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
     "build": "npm install && tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "db": "npx prisma db push && npx prisma generate"
   },
   "author": "utpal singh",
   "license": "ISC",
